--- a/app.json
+++ b/app.json
@@ -1,7 +1,7 @@
 {
-    "name": "RikudoPyrogramString",
+    "name": "SESSOIN BOT",
     "description": "A bot for Generating String Session of Telegram Account mostly for Userbots.",
-    "repository": "https://github.com/AvikaTrivedi/RikudoPyroStr",
+    "repository": "https://github.com/Mohan745/SESSION",
     "logo": "https://telegra.ph/file/f1cf1598c79fd805c60dd.jpg",
     "keywords": [
         "python",
